<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    
    <!-- Activity titles -->
    <string name="app_name">Station Millenium</string>
    <string name="player_activity_title">Player Live Millenium</string>
    <string name="preferences_activity_title">Paramètres</string>
    <string name="antenna_grid_activity_title">La grille des programmes</string>

    <!-- app invite texts -->
    <string name="app_invite_title">Partager l\'appli Station Millenium</string>
    <string name="app_invite_message">Télécharger gratuitement l\'appli officielle Station Millenium sur Google Play</string>
    <string name="app_invite_cta">Télécharger</string>
    <string name="app_invite_thanks">Merci d\'avoir partagé l\'appli Station Millenium</string>
    <string name="app_invite_send_by">Envoyer une invitation via</string>
    <string-array name="send_by_mode">
        <item name="app_invite_send_by_social_networks">Réseaux sociaux</item>
        <item name="app_invite_send_by_sms_email">Email &amp; SMS</item>
    </string-array>
    <string name="app_invite_share_through">Partager via</string>

    <!-- menu entries -->
    <string name="action_invite">Envoyer une invitation</string>

    <!-- player texts -->
    <string name="player_currently_playing">Actuellement à l\'antenne</string>
    <string name="player_last_played_titles">Les 5 derniers titres diffusés :</string>
    <string name="player_network_unavailable">Pas de connexion à Internet</string>
    <string name="player_current_title">%1$s - %2$s</string>
    <string name="player_no_title">Station Millenium</string>
    <string name="player_no_wifi">Connecter le Wifi pour écouter la radio</string>
    <string name="player_error">Impossible de lire la radio</string>
    <string name="player_play">Lecture</string>
    <string name="player_pause">Pause</string>
    <string name="player_stop">Stop</string>
    <string name="player_notification_time">%1$s:%2$s</string>
    <string name="player_cast">Caster</string>
    <string name="player_casting">Lecture de la radio sur le Chromcast</string>

    <!-- playing notification -->
    <string name="notification_ticker_text">Player Live Millenium</string>
    <string name="player_current_title_notification">Actuellement : %1$s - %2$s</string>
    <string name="player_current_title_unavailable_notification">Actuellement : Station Millenium</string>
    <string name="player_notification_play">Lecture</string>
    <string name="player_notification_pause">Pause</string>
    <string name="player_notification_loading">Chargement</string>

    <!-- player widget -->
    <string name="player_widget_loading">Chargement&#8230;</string>
    <string name="player_widget_title">Station Millenium</string>

    <!-- preferences -->
    <string name="preferences_player_category">Player Live</string>
    <string name="preferences_player_wifi_only_summary_on">La radio sera lue uniquement en Wifi</string>
    <string name="preferences_player_wifi_only_summary_off">La radio sera lue en Wifi et en 3G</string>
    <string name="preferences_player_wifi_only">Uniquement en Wifi</string>
    <string name="preferences_player_autostart">Démarrer la lecture automatiquement</string>
    <string name="preferences_player_autostart_summary">Démarrer la lecture de la radio automatiquement lors de l\'affichage du player</string>
    <string name="preferences_links">Tweets Millenium</string>
    <string name="preferences_links_tweets_number">Nombre de derniers tweets</string>
    <string name="preferences_links_tweets_number_summary">Nombre de derniers tweets à afficher</string>
    <string-array name="preferences_links_tweets_number_values">
        <item name="1">1 tweet</item>
        <item name="2">2 tweets</item>
        <item name="3">3 tweets</item>
        <item name="4">4 tweets</item>
        <item name="5">5 tweets</item>
        <item name="6">6 tweets</item>
        <item name="7">7 tweets</item>
        <item name="8">8 tweets</item>
        <item name="9">9 tweets</item>
        <item name="10">10 tweets</item>
        <item name="11">11 tweets</item>
        <item name="12">12 tweets</item>
        <item name="13">13 tweets</item>
        <item name="14">14 tweets</item>
        <item name="15">15 tweets</item>
        <item name="16">16 tweets</item>
        <item name="17">17 tweets</item>
        <item name="18">18 tweets</item>
        <item name="19">19 tweets</item>
        <item name="20">20 tweets</item>
    </string-array>
    <string-array name="preferences_links_tweets_number_values_internal">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
    </string-array>

    <!-- alarm preferences -->
    <string name="preferences_alarm_screen">Alarme</string>
    <string name="preferences_alarm_enable">Activer l\'alarme</string>
    <string name="preferences_alarm_enabled">Alarme activée</string>
    <string name="preferences_alarm_disabled">Alarme désactivée</string>
    <string name="preferences_alarm_repeat">Répétitions</string>
    <string name="preferences_alarm_time">Heure</string>
    <string name="preferences_alarm_set">Sauvegarder</string>
    <string name="preferences_alarm_cancel">Annuler</string>
    <string name="preferences_alarm_no_time">Heure non définie</string>
    <string name="preferences_alarm_time_set">Heure définie : %1$s</string>
    <string name="preferences_alarm_activation_days">Jours</string>
    <string name="preferences_alarm_activation_days_no_selection">Aucun jour sélectionné</string>
    <string name="preferences_alarm_activation_days_separator">,</string>
    <string-array name="preferences_alarm_days">
        <item name="0">Lundi</item>
        <item name="1">Mardi</item>
        <item name="2">Mercredi</item>
        <item name="3">Jeudi</item>
        <item name="4">Vendredi</item>
        <item name="5">Samedi</item>
        <item name="6">Dimanche</item>
    </string-array>
    <string-array name="preferences_alarm_days_values">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string name="preferences_alarm_volume_title">Volume de l\'alarme</string>
    <string name="preferences_alarm_volume_dialog_message">Sélectionner le volume du son de l\'alarme :</string>
    <string name="preferences_alarm_volume_progress_text_suffix">sur %1$d</string>
    <string name="preferences_alarm_volume_summary">%1$d sur %2$d</string>
    <string name="preferences_app_version">Version de l\'application</string>
    <string name="preferences_app_version_not_available">Station Millenium</string>
    <string name="preferences_alarm_network_available_summary">Pour que l\'alarme puisse fonctionner, le Wifi ou les données mobiles doivent être activés.</string>
    <string name="preferences_about">A propos</string>
    <string name="preferences_autorestart">Redémarrage automatique</string>
    <string name="preferences_autorestart_player">Redémarer automatiquement le player en cas de coupure</string>
    <string name="preferences_autorestart_player_on">Le player sera redémarré en cas de coupure</string>
    <string name="preferences_autorestart_player_off">Le player ne sera pas redémarré le player en cas de coupure</string>
    <string name="preferences_autorestart_player_timeout">Délai avant redémarrage du player en cas de coupure</string>
    <string name="preferences_autorestart_player_timeout_summary">Délai : %1$s</string>
    <string-array name="preferences_autorestart_player_timeout_values">
        <item name="1">5 secondes</item>
        <item name="2">10 secondes</item>
        <item name="3">15 secondes</item>
        <item name="4">20 secondes</item>
        <item name="5">30 secondes</item>
        <item name="6">40 secondes</item>
        <item name="7">50 secondes</item>
        <item name="8">1 minute</item>
        <item name="9">1 minute 30</item>
        <item name="10">2 minutes</item>
    </string-array>
    <string-array name="preferences_autorestart_player_timeout_internal">
        <item name="1">5</item>
        <item name="2">10</item>
        <item name="3">15</item>
        <item name="4">20</item>
        <item name="5">30</item>
        <item name="6">40</item>
        <item name="7">50</item>
        <item name="8">60</item>
        <item name="9">90</item>
        <item name="10">120</item>
    </string-array>

    <!-- replay preferences -->
    <string name="preferences_replay_category">Replay</string>
    <string name="preferences_replay_display_titles_summary_off">L\'ensemble des titres du replay ne sera pas affiché</string>
    <string name="preferences_replay_display_titles_summary_on">L\'ensemble des titres du replay sera affiché</string>
    <string name="preferences_replay_display_titles">Afficher l\'ensemble des titres du replay</string>

    <!-- links -->
    <string name="links_latest_tweets"><b>Les derniers tweets Millenium</b></string>

    <!-- other resources -->
    <string name="empty_string" />
    <string name="webview_error">Erreur de chargement : %1$s</string>

    <!-- alarm -->
    <string name="alarm_set">Alarme Station Millenium activée %1$s prochain à %2$sh%3$s</string>
    <string name="alarm_set_same_day">Alarme Station Millenium activée à %1$sh%2$s</string>
    <string name="alarm_triggered">Alarme Station Millenium déclenchée</string>
    <string name="alarm_already_triggered">Alarme Station Millenium : radio déjà en cours de lecture</string>
    <string name="alarm_no_time_set">Pas d\'heure définie pour l\'alarme Station Millenium</string>

    <!-- song search history -->
    <string name="song_search_history">C\'était quoi ?</string>
    <string name="song_search_history_image">C\'était quoi ?</string>
    <string name="song_search_no_image">Aucune image disponible pour ce titre</string>
    <string name="song_search_intro_text">&lt;b&gt;%1$s&lt;/b&gt; résultats trouvés pour &lt;i&gt;%2$s&lt;/i&gt;</string>
    <string name="song_search_intro_text_no_search">&lt;b&gt;%1$s&lt;/b&gt; résultats</string>
    <string name="song_search_image_title">%1$s - %2$s</string>
    <string name="song_search_time_intro_text">&lt;b&gt;%1$s&lt;/b&gt; résultats trouvés pour le &lt;i&gt;%2$s&lt;/i&gt;</string>
    <string name="song_search_pull_to_refresh">Tirer vers le bas pour rafraîchir</string>

    <!-- song search history search interface -->
    <string name="song_search_history_search_hint">Recherche artistes/titres</string>
    <string name="song_search_history_menu_search">Recherche</string>
    <string name="song_search_history_menu_time_search">Recherche par date</string>
    <string name="song_search_history_menu_time_search_select_date">Sélectionner une date</string>
    <string name="song_search_history_menu_time_search_select_time">Sélectionner une heure</string>

    <!-- replay -->
    <string name="replay_activity_title">Le replay</string>
    <string name="replay_item_activity_title">Replay</string>

    <!-- cast -->
    <string name="introducing_cast">Diffuser sur un Chromecast</string>

</resources>