<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:millenium="http://schemas.android.com/apk/res-auto" >

    <!-- alarm preferences -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_alarm"
        android:key="preferences_alarm_enabled"
        android:summaryOff="@string/preferences_alarm_disabled"
        android:summaryOn="@string/preferences_alarm_enabled"
        android:title="@string/preferences_alarm_enable" />

    <!-- alarm data warning -->
    <Preference
        android:key="preferences_alarm_warning"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/preferences_alarm_network_available_summary" />
    
    <!-- alarm volume -->
    <com.stationmillenium.android.utils.preferences.SeekBarDialogPreference
        android:icon="@drawable/ic_alarm_volume"
        android:dialogMessage="@string/preferences_alarm_volume_dialog_message"
        android:key="preferences_alarm_volume"
        android:title="@string/preferences_alarm_volume_title"
        millenium:min="1" />
    
    <!-- alarm repetitions preferences -->
    <PreferenceCategory android:title="@string/preferences_alarm_repeat" >

        <!-- alarm hour preference -->
        <com.stationmillenium.android.utils.preferences.TimePreference
            android:icon="@drawable/ic_alarm_time"
            android:key="preferences_alarm_time"
            android:title="@string/preferences_alarm_time" />

        <!-- alarm days repetition preferences -->
        <com.stationmillenium.android.utils.preferences.ListPreferenceMultiSelect
            android:entries="@array/preferences_alarm_days"
            android:entryValues="@array/preferences_alarm_days_values"
            android:icon="@drawable/ic_alarm_calendar"
            android:key="preferences_alarm_days_string"
            android:title="@string/preferences_alarm_activation_days"
            millenium:separator="|" />
    </PreferenceCategory>

</PreferenceScreen>