<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/widget_margin"
                android:layout_marginRight="@dimen/widget_margin"
                android:background="@drawable/widget_border"
                android:gravity="start|top">

    <LinearLayout
        android:id="@+id/widget_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/widget_image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty_string"
            android:src="@drawable/player_default_image"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/widget_image_layout"
        android:layout_toRightOf="@id/widget_image_layout"
        android:gravity="top">

        <LinearLayout
            android:id="@+id/widget_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageButton
                android:id="@+id/widget_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_play"
                android:src="@drawable/play"/>

            <ImageButton
                android:id="@+id/widget_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_pause"
                android:src="@drawable/pause"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/widget_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_stop"
                android:src="@drawable/stop"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/widget_buttons_layout"
            android:layout_toStartOf="@id/widget_buttons_layout"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_artist_text"
                style="@style/MaterialTheme.Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/player_widget_title"/>

            <TextView
                android:id="@+id/widget_title_text"
                style="@style/MaterialTheme.Text.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>