<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.stationmillenium.android.libutils.activities.PlayerState" alias="PlayerState" />
        <import type="android.view.View" alias="View" />
        <variable
            name="historyArray"
            type="java.util.List&lt;String&gt;" />
        <variable
            name="playerState"
            type="PlayerState" />
        <variable
            name="playingSeconds"
            type="String" />
        <variable
            name="playingMinutes"
            type="String" />
        <variable
            name="activity"
            type="com.stationmillenium.android.activities.PlayerActivity" />
        <variable
            name="songData"
            type="com.stationmillenium.android.libutils.dtos.CurrentTitleDTO.Song" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageSwitcher
                android:id="@+id/player_image_switcher"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/player_image_border"
                android:gravity="center"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"
                app:imageURL="@{songData.imageURL}"/>

            <TextView
                android:id="@+id/player_current_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_image_switcher"
                android:gravity="center"
                android:paddingTop="10dp"
                android:shadowColor="#ff000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="1.5"
                android:text="@string/player_currently_playing"
                android:textColor="#ffffffff"
                android:textSize="18sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/current_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_current_title_text"
                android:gravity="center"
                android:paddingTop="5dp"
                android:textColor="#ff1887df"
                android:textSize="@dimen/player_last_5_titles_text_size"
                android:textStyle="italic"
                app:artist="@{songData.artist}"
                app:title="@{songData.title}" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_last_5_titles_margin_top"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:shadowColor="#ff000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="1.5"
                android:text="@string/player_last_played_titles"
                android:textColor="#ff4CF5A0"
                android:textSize="@dimen/player_last_5_titles_text_size" />

            <ListView
                android:id="@+id/player_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:listSelector="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/player_list_divider_height"
                app:historyList="@{historyArray}"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#00000000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/player_button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:paddingRight="5dp">

                    <ImageButton
                        android:id="@+id/play_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:onClick="@{() -> activity.startPlayer()}"
                        android:src="@drawable/ic_player_play"
                        android:visibility="@{playerState == PlayerState.STOPPED || playerState == PlayerState.PAUSED ? View.VISIBLE : View.GONE}"/>

                    <ImageButton
                        android:id="@+id/pause_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_toRightOf="@id/play_button"
                        android:contentDescription="@string/player_pause"
                        android:onClick="@{() -> activity.pausePlayer()}"
                        android:src="@drawable/ic_player_pause"
                        android:clickable="@{playerState == PlayerState.PLAYING}"
                        android:visibility="@{playerState == PlayerState.BUFFERING || playerState == PlayerState.PLAYING ? View.VISIBLE : View.GONE}"/>

                    <ImageButton
                        android:id="@+id/stop_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/pause_button"
                        android:contentDescription="@string/player_stop"
                        android:onClick="@{() -> activity.stopPlayer()}"
                        android:src="@drawable/ic_player_stop"
                        android:visibility="@{playerState == PlayerState.PLAYING || playerState == PlayerState.BUFFERING || playerState == PlayerState.PAUSED ? View.VISIBLE : View.GONE}" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/player_button_layout"
                    android:gravity="left"
                    android:paddingLeft="5dp">

                    <ProgressBar
                        android:id="@+id/player_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="@{playerState == PlayerState.BUFFERING ? View.VISIBLE : View.GONE}" />

                    <TextView
                        android:id="@+id/player_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="2dp"
                        android:layout_toRightOf="@id/player_progress_bar"
                        android:gravity="center"
                        android:text="@string/player_loading"
                        android:textColor="#ff1887df"
                        android:textSize="13sp"
                        android:visibility="@{playerState == PlayerState.BUFFERING ? View.VISIBLE : View.GONE}" />

                    <TextView
                        android:id="@+id/player_current_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/player_progress_bar"
                        android:gravity="center"
                        android:textColor="#ff1887df"
                        android:textSize="30sp"
                        android:typeface="monospace"
                        android:text='@{(playingMinutes != null &amp;&amp; playingSeconds != null) ? @string/player_notification_time(playingMinutes, playingSeconds) : ""}'
                        android:visibility="@{playerState == PlayerState.PLAYING ? View.VISIBLE : View.GONE}"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</layout>